Updates kotlin dependency.
Refs #99041

--- a/build.gradle
+++ b/build.gradle
@@ -421,7 +421,7 @@ project(':wres-io')
         implementation 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
 
         // Update vulnerable kotlin-stdlib that okhttp/okio uses
-        implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
+        implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.10-RC'
 
         // To accurately detect mime types of files.
         implementation 'org.apache.tika:tika-core:1.27'
